--- a/templates/fragments/post.html
+++ b/templates/fragments/post.html
@@ -1,16 +1,20 @@
-<p>
+<div>
     {% if list_view %}
-        <h2 class="vertical-spacing-bottom-0-5">{{post.metadata.title}}</h2>
+        <h2 class="vertical-spacing-bottom-0-5"><a href="/weeknotes/posts/{{post.metadata.slug}}">{{post.metadata.title}}</a></h2>
     {% else %}
-        <h2 class="vertical-spacing-bottom-0-5">{{post.metadata.title}}</h2>
+        <h1 class="vertical-spacing-bottom-0-5">{{post.metadata.title}}</h1>
     {% endif %}
-    <div class="small vertical-spacing-bottom-0-5">
-     tags :
-     {% for tag in post.metadata.tags %}
-       <a href="/weeknotes/tags/{{tag}}">{{tag}}</a>
-     {% endfor %}
+   <div class="small vertical-spacing-bottom-0-25">
+        posted : {{post.metadata.fulldate|humanize_fulldate}}
     </div>
-    <div class="vertical-spacing-bottom">
+        
+    <div class="vertical-spacing-bottom-0-25">
      {{post.content|safe}}
     </div>
- </p>
+    <div class="small vertical-spacing-bottom">
+        tags :
+        {% for tag in post.metadata.tags %}
+            <a href="/weeknotes/tags/{{tag}}">{{tag}}</a>
+        {% endfor %}
+    </div>
+</div>
