--- a/templates/facet.html
+++ b/templates/facet.html
@@ -4,31 +4,17 @@
 {% block title %} weeknotes for {{facet_type}} {{facet_ui_name|deslugify|capitalize}}{% endblock %}
 
 {% block main %}
-{% set list_view = True %}
+{% set facet = True %}
 <section class="vertical-spacing-top">
   <div class="grid-container">
     <div class="column-full-width">
       <div class="inner">
         <h1 class="vertical-spacing-bottom">{{facet_type|capitalize}} : {{facet_ui_name|deslugify|capitalize}}</h1>
-        {% for post in posts %}
-        <p>
-           <h2 class="vertical-spacing-bottom-0-5">{{post.metadata.title}}</h2>
-           <div class="small vertical-spacing-bottom-0-5">
-            tags :
-            {% for tag in post.metadata.tags %}
-              <a href="/weeknotes/tags/{{tag}}">{{tag}}</a>
-            {% endfor %}
-           </div>
-           <div class="vertical-spacing-bottom">
-            {{post.content|safe}}
-           </div>
-        </p>
-        {% endfor %}
       </div>
     </div>
   </div>
 </section>
 
-
+{% include "fragments/list.html" %}
 
 {% endblock %}
