--- a/templates/fragments/list_view.html
+++ b/templates/fragments/list_view.html
@@ -2,17 +2,21 @@
 
 <section class="">
     <div class="grid-container">
-      <div class="column-full-width">
+      <div class="column-two-thirds">
         <div class="inner">
             <small>{{post.metadata.fulldate|humanize_fulldate}}</small>
             
             <h2 class="heading-medium vertical-spacing-bottom-0-5"><a href="/weeknotes/posts/{{post.metadata.slug}}">Week {{post.metadata.week}} : {{post.metadata.title}}</a></h2>
-                
             <div class="vertical-spacing-bottom-0-25">
-            {{post.content|truncate_list_posts|safe}}
-            <small>
+
+            {% if first or facet %}
+              {{post.content|safe}}
+            {% else %}
+              {{post.content|truncate_list_posts|safe}}
+              <small>
                 <a href="/weeknotes/posts/{{post.metadata.slug}}">Read more...</a>
-            </small>
+                </small>
+            {% endif %}
             </div>
             <div class="small vertical-spacing-bottom">
                 <smaller>
@@ -22,6 +26,10 @@
                 {% endfor %}
                 </smaller>
             </div>
+            {% if first %}
+            <hr class="vertical-spacing-bottom">
+            <h3 class="heading-medium">Older posts</h3>
+            {% endif %}
         </div>
     </div>
 </section>
