Added style rule.
#TODO consolitate styles and put into the static distribution for styles

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,9 +45,10 @@
   }
   
   span.label {
+      margin-top: 7px;
       padding: 3px;
       margin-right: 5px;
-  
+      display: inline-block;
   }
   
   a.label_link {
