Fixes to templates and filters

--- a/templates/base.html
+++ b/templates/base.html
@@ -54,6 +54,12 @@
   a.label_link {
       text-decoration: none;
   }
+
+  td.content {
+   padding: 45px;
+   border: 1px solid;
+  }
+
   </style>
 {% block style %}{% endblock %}  
 </head>
